--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -19,7 +19,7 @@ media_library:
     cloud_name: dkemko1lp
     api_key: 221453993611229
     multiple: true
-    # not sure how the below works yet but they're related to making the cloudinary widget more seamless
+    # not sure how to get below to work yet but they're related to making the cloudinary widget more seamless
     # inline-container: "body"
     # remove_header: true
 
@@ -34,8 +34,8 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Description", name: "description", widget: "text"}
-      - {label: "Featured Post", name: "featuredpost", widget: "boolean"}
-      - {label: "Featured Image", name: "featuredimage", widget: image}
+      - {label: "Featured Post", name: "featuredpost", widget: "boolean", required: false}
+      # - {label: "Featured Image", name: "featuredimage", widget: image, required: false}
       - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Tags", name: "tags", widget: "list"}
 
@@ -86,9 +86,9 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Description", name: "description", widget: "text"}
-      - {label: "Featured Image", name: "featuredimage", widget: "image"}
-      - {label: "Location", name: "location", widget: "map"}
+      - {label: "Featured Image", name: "featuredimage", widget: "image", allow_multiple: false}
+      - {label: "Location", name: "location", widget: "map", required: false}
       - label: "Photos"
         name: "photos"
         widget: image
-      - {label: "Tags", name: "tags", widget: "list"}
+      - {label: "Tags", name: "tags", widget: "list", required: false}
